#50 Java 17 compatibility and small enhancements